--- a/department-service.properties
+++ b/department-service.properties
@@ -18,3 +18,5 @@ spring.h2.console.path=/h2-console
 
 spring.jpa.show-sql=true
 eureka.client.service-url.defaultZone= http://localhost:8761/eureka/
+
+spring.boot.mesage = hello, Department Service
