--- a/employee-service.properties
+++ b/employee-service.properties
@@ -17,6 +17,7 @@ spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 
 spring.jpa.show-sql=true
+server.port=8081
 
 eureka.client.service-url.defaultZone= http://localhost:8761/eureka/
 spring.boot.message = Hello, Employee Service
