--- a/employee-service.properties
+++ b/employee-service.properties
@@ -20,4 +20,4 @@ spring.jpa.show-sql=true
 server.port=8081
 
 eureka.client.service-url.defaultZone= http://localhost:8761/eureka/
-spring.boot.message = Hello, Employee Service.
+spring.boot.message = "Hello, Employee Service."
