--- a/department-service.properties
+++ b/department-service.properties
@@ -19,4 +19,4 @@ spring.h2.console.path=/h2-console
 spring.jpa.show-sql=true
 eureka.client.service-url.defaultZone= http://localhost:8761/eureka/
 
-spring.boot.message = Hello, Department Service
+spring.boot.message = "Hello, Department Service update"
